<resources>
    <string name="app_name">Battle Gaming</string>
    <string name="register_screen">Register</string>
    <string name="login_screen"> Log In</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="calendar_name">Calendar</string>

    <string name="color_del_texto">Text color</string>
    <string name="color_de_fondo">Background color</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="_03">03</string>
    <string name="loading">Loading...</string>
    <string name="title">Title</string>
    <string name="location">Training location</string>
    <string name="guild">Guild</string>
    <string name="new_session">New Session</string>
    <string name="input_training_error">Error! Empty field.</string>
    <string name="ranking">Ranking</string>
    <string name="championship">Championship</string>
    <string name="participants">Participants</string>
    <string name="name">Name&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;(Optional)</string>
    <string name="surname">Surname&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;(Optional)</string>
    <string name="password">Password</string>
    <string name="email">MyMail@Email.com</string>
    <string name="login">&#160;&#160;&#160;Already a Warrior? Log in!&#160;&#160;&#160;</string>
    <string name="register">&#160;&#160;&#160;Become a Warrior. Register!&#160;&#160;&#160;</string>
    <string name="nickname">(Optional) Nickname</string>
    <string name="log_in_button_description">Log in</string>
    <string name="failed_login_message">Log in failed&#8230; Try again in a few minutes.</string>
    <string name="empty_login_field">Empty field, please fill out all fields.</string>
    <string name="password_check">Check Password</string>
    <string name="password_mismatch">The passwords don\'t match</string>
    <string name="empty_register_password_field">Please enter a Password.</string>
    <string name="empty_register_email_field">Please enter your E-mail.</string>
    <string name="profile_Nickname">Nickname</string>
    <string name="profile_Name">Name:</string>
    <string name="profile_Surname">Surname:</string>
    <string name="profile_Email">Verified:</string>
    <string name="profile_Guild">Guild:</string>
    <string name="profile_Phone_Number">Number:</string>
    <string name="profile_Adress">Adress:</string>
    <string name="btn_profile_Save">Save</string>
    <string name="profile_Motto">You may lose the fight, as long as you win the war!</string>
    <string name="successful_save">Changes saved!</string>
    <string name="pass_length">The password needs to be at least 6 characters long.</string>
    <string name="valid_email">Invalid E-mail.</string>
    <string name="errorMessage2">Error! Less than 2 participants.</string>
    <string name="guilds_players_switch">Guilds:</string>
    <string name="tournament_type">Type:</string>
    <string name="tournament_win_battle_score">Win Score:</string>
    <string name="guilds">Guilds</string>
    <string name="smith">Smith:</string>
    <string name="weapon_description">Description...</string>
    <string name="edit_weapon_price">Price</string>
    <string name="edit_weapon_name">Name</string>
    <string name="weapon_price">Price:</string>
    <string name="weapon_name">Name:</string>
    <string name="Guildless">Guildless</string>
    <string name="fill_all_fields">Please fill out all fields.</string>
    <string name="guild_title">Guild</string>
    <string name="profile_title">Profile</string>
    <string name="app_title">Battle Gaming</string>
    <string name="guild_list_title">Guild List</string>
    <string name="guild_motto">Guild Motto...</string>
    <string name="guild_name">Guild name:&#160;&#160;&#160;&#160;</string>
    <string name="guild_logo">Logo (Optional):</string>
    <string name="create_guild">Create Guild</string>
    <string name="no_internet_restart">No internet connection, check your connection and press "Reload".</string>
    <string name="message_board">Message Board</string>
    <string name="members">Members</string>
    <string name="battles">Battles</string>
    <string name="new_weapon">New weapon</string>


    <string name="news">News</string>
    <string name="agenda">Agenda</string>
    <string name="tournaments">Tournaments</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="calender_row_span">Calender items per row</string>
    <string name="verify_first">Please verify your email first!</string>
    <string name="the_beginning">Aqui empezo todo, el principio de la historia.</string>
    <string name="the_end">Llegastes al ultimo mes, se va a acabar el mundo!</string>
    <string name="jan">January</string>
    <string name="feb">Febuary</string>
    <string name="mar">March</string>
    <string name="dec">December</string>
    <string name="nov">November</string>
    <string name="oct">October</string>
    <string name="sep">September</string>
    <string name="aug">August</string>
    <string name="jul">July</string>
    <string name="jun">June</string>
    <string name="may">May</string>
    <string name="apr">April</string>
    <string name="news_title">News</string>
    <string name="official_contact">Official Contact:</string>
    <string name="log_in_button_text">Log In!</string>
    <string name="logging_in">Logging in...</string>
    <string name="weapon_list_title">Weapon List</string>
    <string name="open_training">Open training</string>

    <string-array name="hours">
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="score">
        <item>--------------------------</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    <string-array name="type">
        <item>--------------------------</item>
        <item>Elimination</item>
        <item>Tournament</item>
        <item>All vs. All</item>
    </string-array>
    <string-array name="grid_span">
        <item>&#160;&#160;&#160;&#160;&#160;1&#160;&#160;&#160;&#160;</item>
        <item>&#160;&#160;&#160;&#160;&#160;2&#160;&#160;&#160;&#160;</item>
        <item>&#160;&#160;&#160;&#160;&#160;3&#160;&#160;&#160;&#160;</item>
        <item>&#160;&#160;&#160;&#160;&#160;4&#160;&#160;&#160;&#160;</item>
        <item>&#160;&#160;&#160;&#160;&#160;5&#160;&#160;&#160;&#160;</item>
        <item>&#160;&#160;&#160;&#160;&#160;6&#160;&#160;&#160;&#160;</item>
        <item>&#160;&#160;&#160;&#160;&#160;7&#160;&#160;&#160;&#160;</item>
        <item>&#160;&#160;&#160;&#160;&#160;8&#160;&#160;&#160;&#160;</item>
        <item>&#160;&#160;&#160;&#160;&#160;9&#160;&#160;&#160;&#160;</item>
        <item>&#160;&#160;&#160;&#160;10&#160;&#160;&#160;&#160;</item>
    </string-array>
</resources>
