<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_date"
            android:icon="@drawable/ic_menu_date"
            android:title="@string/agenda" />

        <item
            android:id="@+id/nav_Guild"
            android:icon="@drawable/legolas"
            android:title="@string/guild" />

        <item
            android:id="@+id/nav_fights"
            android:icon="@drawable/swords"
            android:title="@string/tournaments" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/usericon"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_LogOut"
            android:icon="@drawable/logout_inverted"
            android:title="@string/log_out" />

        <item
            android:id="@+id/nav_test2"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="test" />
    </group>
</menu>
