<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/new_session"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:textAlignment="center"
        android:textSize="40sp"/>
    <TextView
        android:text="@string/input_training_error"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:textAlignment="center"
        android:id="@+id/ErrorMessage"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/guildname"
        android:hint="@string/guild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp" />
    <EditText
        android:id="@+id/location"
        android:hint="@string/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif" />

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerHorizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Spinner
            android:id="@+id/Hour_Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/Minute_Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ok_action"
            android:layout_weight="1"
            android:text="Ok"
            android:textAllCaps="false" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_action"
            android:layout_weight="1"
            android:text="Cancel"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>