<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/new_session"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:textAlignment="center"
        android:textSize="40sp"/>
    <TextView
        android:text="@string/errorMessage2"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:textAlignment="center"
        android:id="@+id/ErrorMessage"
        android:textSize="20sp"/>

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:dividerHorizontal"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:layout_marginTop="10dp">


        <TextView
            android:id="@+id/points_to_win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/tournament_win_battle_score"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/Score_Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"/>


    </LinearLayout>

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:dividerHorizontal"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:layout_marginTop="15dp">


        <TextView
            android:id="@+id/tournament_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/tournament_type"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/Type_Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"/>


    </LinearLayout>

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:dividerHorizontal"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:layout_marginTop="10dp">


        <Switch
            android:id="@+id/Guilds_Players_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:theme="@style/SwitchTheme"
            android:text="@string/guilds_players_switch" android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp" />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tournament_participants"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <Button
        android:id="@+id/add_participant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="+"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ok_action"
            android:layout_weight="1"
            android:text="Ok"
            android:textAllCaps="false" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_action"
            android:layout_weight="1"
            android:text="Cancel"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>